recursion.logo.lessons.recursion.logo.koch.Koch.scala.error
Koch:16: error: not found: value level
    avance(length/level)
                  ^